// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flag Snapshots renders Albania correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 428.57142857142856"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="428.57142857142856"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="428.57142857142856"
            width="600"
            x="0"
            y="0"
          />
        </g>
        <foreignobject
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#000000"
          height="285.42857142857144"
          width="285.42857142857144"
          x="157.28571428571428"
          y="71.57142857142856"
        >
          <div
            style="width: 100%; height: 100%; background-color: rgb(0, 0, 0); mask-image: url(https://upload.wikimedia.org/wikipedia/commons/b/b7/Albanian_Eagle.svg); mask-size: contain; mask-repeat: no-repeat; mask-position: center;"
          />
        </foreignobject>
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="428.57142857142856"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Algeria correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#007A3D"
            height="400"
            width="300"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="400"
            width="300"
            x="300"
            y="0"
          />
        </g>
        <path
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          d="
      M 386.60254139837764,150.00000176657716 
      A 100 100 0 1 0 386.60254139837764,249.99999823342284
      A 80 80 0 1 1 386.60254139837764,150.00000176657716 
      Z
     M 390.45083999999997,200 L 355.90306459256146,211.22669831878625 L 355.9016897187473,247.55282581475768 L 334.5486154074385,218.16517946123744 L 299.9999902812526,229.38926261462365 L 321.35083999999995,200 L 299.9999902812526,170.61073738537635 L 334.5486154074385,181.83482053876256 L 355.9016897187473,152.44717418524232 L 355.90306459256146,188.77330168121375 Z"
          display="block"
          fill="#EF3340"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Andorra correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 420"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="420"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#0055A4"
            height="420"
            width="200"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFD700"
            height="420"
            width="200"
            x="200"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="420"
            width="200"
            x="400"
            y="0"
          />
        </g>
        <image
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#E2E8F0"
          height="189"
          href="https://upload.wikimedia.org/wikipedia/commons/4/4e/Coat_of_arms_of_Andorra.svg"
          width="189"
          x="205.5"
          y="115.5"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="420"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Angola correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="200"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#000000"
            height="200"
            width="600"
            x="0"
            y="200"
          />
        </g>
        <foreignobject
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFD700"
          height="180"
          width="180"
          x="210"
          y="110"
        >
          <div
            style="width: 100%; height: 100%; background-color: rgb(255, 215, 0); mask-image: url(https://upload.wikimedia.org/wikipedia/commons/0/02/Machete_and_Gear.svg); mask-size: contain; mask-repeat: no-repeat; mask-position: center;"
          />
        </foreignobject>
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Antigua and Barbuda correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#000000"
            height="150"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#0055A4"
            height="100"
            width="600"
            x="0"
            y="150"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="150"
            width="600"
            x="0"
            y="250"
          />
        </g>
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          fill="#EF3340"
          points="0,0 0,400 300,400"
          stroke="none"
          stroke-linejoin="round"
          stroke-width="0"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          fill="#EF3340"
          points="600,0 600,400 300,400"
          stroke="none"
          stroke-linejoin="round"
          stroke-width="0"
        />
        <path
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          d="M 255,150 L 210,150 L 255.86466238185463,141.22093550927423 L 216.85084207398418,115.55849108714193 L 262.58386744638545,124.9993395141179 L 236.36038969321072,86.36038969321072 L 274.9993395141179,112.58386744638545 L 265.5584910871419,66.85084207398421 L 291.2209355092742,105.86466238185463 L 300,60 L 308.7790644907258,105.86466238185463 L 334.4415089128581,66.8508420739842 L 325.00066048588207,112.58386744638545 L 363.6396103067893,86.3603896932107 L 337.41613255361455,124.9993395141179 L 383.1491579260158,115.55849108714187 L 344.13533761814534,141.2209355092742 L 390,149.99999999999997 L 345,150 Z"
          display="block"
          fill="#FFD700"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Argentina correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 375"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="375"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#69B3E7"
            height="125"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="125"
            width="600"
            x="0"
            y="125"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#69B3E7"
            height="125"
            width="600"
            x="0"
            y="250"
          />
        </g>
        <image
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#E2E8F0"
          height="112.5"
          href="https://upload.wikimedia.org/wikipedia/commons/9/9d/Sol_de_Mayo-Bandera_de_Argentina.svg"
          width="112.5"
          x="243.75"
          y="131.25"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="375"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Armenia correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 300"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="300"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="100"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#0055A4"
            height="100"
            width="600"
            x="0"
            y="100"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FF6600"
            height="100"
            width="600"
            x="0"
            y="200"
          />
        </g>
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="300"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Australia correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 300"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="300"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#00008B"
            height="300"
            width="600"
            x="0"
            y="0"
          />
        </g>
        <rect
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          fill="#00008B"
          height="150"
          stroke="none"
          stroke-width="0"
          width="300"
        />
        <image
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#E2E8F0"
          height="149.85"
          href="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg"
          width="299.7"
          x="0.15000000000000568"
          y="0.07500000000000284"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="150,180 157.80990730411605,208.78256037775645 185.18241671106134,196.942958916357 167.54870241927281,220.99462318878633 193.87175604818208,235.01344202803415 164.07296668442453,236.2228164334572 169.5247682602901,265.54359905560887 150,243 130.4752317397099,265.54359905560887 135.92703331557547,236.2228164334572 106.12824395181794,235.01344202803415 132.45129758072716,220.99462318878636 114.81758328893866,196.942958916357 142.19009269588398,208.78256037775645"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="450,23.85 453.67065643293455,37.37780337754553 466.53573585419883,31.81319069068779 458.2478901370582,43.11747289872958 470.61972534264555,49.70631775317605 456.6142943416795,50.27472372372488 459.17664108233635,64.05549155613616 450,53.46 440.82335891766365,64.05549155613616 443.3857056583205,50.27472372372489 429.38027465735445,49.70631775317605 441.7521098629418,43.11747289872959 433.46426414580117,31.81319069068779 446.32934356706545,37.37780337754553"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="450,233.85 453.67065643293455,247.37780337754555 466.53573585419883,241.81319069068778 458.2478901370582,253.11747289872957 470.61972534264555,259.70631775317605 456.6142943416795,260.2747237237249 459.17664108233635,274.0554915561362 450,263.46 440.82335891766365,274.0554915561362 443.3857056583205,260.2747237237249 429.38027465735445,259.70631775317605 441.7521098629418,253.1174728987296 433.46426414580117,241.8131906906878 446.32934356706545,247.37780337754552"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="360,134.85 363.67065643293455,148.37780337754555 376.53573585419883,142.81319069068778 368.2478901370582,154.11747289872957 380.61972534264555,160.70631775317605 366.6142943416795,161.2747237237249 369.17664108233635,175.05549155613616 360,164.46 350.82335891766365,175.05549155613616 353.3857056583205,161.2747237237249 339.38027465735445,160.70631775317605 351.7521098629418,154.1174728987296 343.46426414580117,142.8131906906878 356.32934356706545,148.37780337754552"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="540,113.85 543.6706564329345,127.37780337754553 556.5357358541988,121.81319069068779 548.2478901370582,133.11747289872957 560.6197253426456,139.70631775317605 546.6142943416795,140.2747237237249 549.1766410823363,154.05549155613616 540,143.46 530.8233589176637,154.05549155613616 533.3857056583205,140.2747237237249 519.3802746573544,139.70631775317605 531.7521098629418,133.1174728987296 523.4642641458012,121.81319069068779 536.3293435670655,127.37780337754553"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="492,185.4 494.81431578797634,194.12642663093274 503.98331210531893,194.10638587087567 496.5536586000212,199.47957336906725 499.40609417888516,208.19361412912434 492,202.788 484.59390582111484,208.19361412912434 487.4463413999788,199.47957336906725 480.01668789468107,194.10638587087567 489.18568421202366,194.12642663093274"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="300"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Austria correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="133.33333333333334"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="133.33333333333334"
            width="600"
            x="0"
            y="133.33333333333334"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="133.33333333333334"
            width="600"
            x="0"
            y="266.6666666666667"
          />
        </g>
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Azerbaijan correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 300"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="300"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#69B3E7"
            height="100"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="100"
            width="600"
            x="0"
            y="100"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#007A3D"
            height="100"
            width="600"
            x="0"
            y="200"
          />
        </g>
        <path
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          d="
      M 335.9375,122.91686698792032 
      A 45 45 0 1 0 335.9375,177.08313301207968
      A 37.5 37.5 0 1 1 335.9375,122.91686698792032 
      Z
     M 375,150 L 361.5484941563911,154.78354290456363 L 367.6776695296637,167.6776695296637 L 354.7835429045636,161.5484941563911 L 350,175 L 345.2164570954364,161.5484941563911 L 332.32233047033634,167.6776695296637 L 338.4515058436089,154.78354290456363 L 325,150 L 338.4515058436089,145.21645709543637 L 332.3223304703363,132.3223304703363 L 345.2164570954364,138.4515058436089 L 350,125 L 354.7835429045636,138.4515058436089 L 367.67766952966366,132.3223304703363 L 361.5484941563911,145.21645709543637 Z"
          display="block"
          fill="#FFFFFF"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="300"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Bahrain correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 360"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="360"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="360"
            width="600"
            x="0"
            y="0"
          />
          <polygon
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            points="0,0 150,0 240,36 150,72 240,108 150,144 240,180 150,216 240,252 150,288 240,324 150,360 0,360"
          />
        </g>
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="360"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Bangladesh correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 360"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="360"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#007A3D"
            height="360"
            width="600"
            x="0"
            y="0"
          />
        </g>
        <circle
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          cx="270"
          cy="180"
          display="block"
          fill="#EF3340"
          r="121.5"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="360"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Barbados correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#0055A4"
            height="400"
            width="200"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFD700"
            height="400"
            width="200"
            x="200"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#0055A4"
            height="400"
            width="200"
            x="400"
            y="0"
          />
        </g>
        <foreignobject
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#000000"
          height="192"
          width="192"
          x="204"
          y="104"
        >
          <div
            style="width: 100%; height: 100%; background-color: rgb(0, 0, 0); mask-image: url(https://upload.wikimedia.org/wikipedia/commons/a/a7/Barbados_trident.svg); mask-size: contain; mask-repeat: no-repeat; mask-position: center;"
          />
        </foreignobject>
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Belarus correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 300"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="300"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="200"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#007A3D"
            height="100"
            width="600"
            x="0"
            y="200"
          />
        </g>
        <image
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#E2E8F0"
          height="66.6"
          href="https://upload.wikimedia.org/wikipedia/commons/9/99/Belarus_flag_pattern.svg"
          transform="rotate(90 33.60000000000002 150)"
          width="299.7"
          x="-116.24999999999997"
          y="116.7"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="300"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Belgium correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 520"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="520"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#000000"
            height="520"
            width="200"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFD700"
            height="520"
            width="200"
            x="200"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="520"
            width="200"
            x="400"
            y="0"
          />
        </g>
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="520"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Belize correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="33.333333333333336"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#0055A4"
            height="333.33333333333337"
            width="600"
            x="0"
            y="33.333333333333336"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="33.333333333333336"
            width="600"
            x="0"
            y="366.6666666666667"
          />
        </g>
        <circle
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          cx="300"
          cy="200"
          display="block"
          fill="#FFFFFF"
          r="126"
        />
        <image
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#94A3B8"
          height="204"
          href="https://upload.wikimedia.org/wikipedia/commons/d/dd/Coat_of_arms_of_Belize.svg"
          width="204"
          x="198"
          y="98"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Benin correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFD700"
            height="200"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="200"
            width="600"
            x="0"
            y="200"
          />
        </g>
        <rect
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          fill="#007A3D"
          height="400"
          stroke="none"
          stroke-width="0"
          width="240"
          x="0"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Bhutan correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <polygon
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFD700"
            points="0,0 600,0 0,400"
          />
          <polygon
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FF6600"
            points="0,400 600,400 600,0"
          />
        </g>
        <image
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#E2E8F0"
          height="325.6"
          href="https://upload.wikimedia.org/wikipedia/commons/6/6c/Dragon_from_Flag_of_Bhutan.svg"
          width="448.8"
          x="75.6"
          y="37.19999999999999"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Bolivia correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 409.09090909090907"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="409.09090909090907"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="136.36363636363635"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFD700"
            height="136.36363636363635"
            width="600"
            x="0"
            y="136.36363636363635"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#007A3D"
            height="136.36363636363635"
            width="600"
            x="0"
            y="272.7272727272727"
          />
        </g>
        <image
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#E2E8F0"
          height="135"
          href="https://upload.wikimedia.org/wikipedia/commons/0/06/Coat_of_arms_of_Bolivia.svg"
          width="155.76923076923075"
          x="222.11538461538464"
          y="137.04545454545453"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="409.09090909090907"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Bosnia and Herzegovina correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 300"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="300"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#0055A4"
            height="300"
            width="600"
            x="0"
            y="0"
          />
        </g>
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="102,-25.859999999999985 107.05201424345381,-10.313501066652659 123.39877161664096,-10.312882373436302 110.17433075755685,-0.7039989333473122 115.22516817658064,14.842882373436332 102,5.235000000000015 88.77483182341936,14.842882373436332 93.82566924244315,-0.7039989333473113 80.60122838335904,-10.312882373436299 96.94798575654619,-10.313501066652659"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="139.5,11.64 144.5520142434538,27.186498933347327 160.89877161664094,27.187117626563683 147.67433075755685,36.79600106665267 152.72516817658064,52.34288237343632 139.5,42.735 126.27483182341936,52.34288237343632 131.32566924244315,36.79600106665267 118.10122838335904,27.187117626563687 134.4479857565462,27.186498933347327"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="177,49.14 182.0520142434538,64.68649893334732 198.39877161664094,64.68711762656369 185.17433075755685,74.29600106665268 190.22516817658064,89.84288237343631 177,80.235 163.77483182341936,89.84288237343631 168.82566924244315,74.29600106665268 155.60122838335906,64.68711762656369 171.9479857565462,64.68649893334732"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="214.5,86.64 219.5520142434538,102.18649893334732 235.89877161664094,102.18711762656369 222.67433075755685,111.79600106665268 227.72516817658064,127.34288237343631 214.5,117.735 201.27483182341936,127.34288237343631 206.32566924244315,111.79600106665268 193.10122838335906,102.18711762656369 209.4479857565462,102.18649893334732"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="252,124.13999999999999 257.0520142434538,139.6864989333473 273.39877161664094,139.68711762656366 260.17433075755685,149.29600106665265 265.22516817658067,164.8428823734363 252,155.23499999999999 238.77483182341936,164.8428823734363 243.82566924244315,149.29600106665265 230.60122838335906,139.68711762656366 246.9479857565462,139.6864989333473"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="289.5,161.64 294.5520142434538,177.1864989333473 310.89877161664094,177.18711762656366 297.67433075755685,186.79600106665265 302.72516817658067,202.3428823734363 289.5,192.73499999999999 276.27483182341933,202.3428823734363 281.32566924244315,186.79600106665265 268.10122838335906,177.18711762656366 284.4479857565462,177.1864989333473"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="327,199.14 332.0520142434538,214.6864989333473 348.39877161664094,214.68711762656366 335.17433075755685,224.29600106665265 340.22516817658067,239.8428823734363 327,230.23499999999999 313.77483182341933,239.8428823734363 318.82566924244315,224.29600106665265 305.60122838335906,214.68711762656366 321.9479857565462,214.6864989333473"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="364.5,236.64 369.5520142434538,252.1864989333473 385.89877161664094,252.18711762656366 372.67433075755685,261.79600106665265 377.72516817658067,277.3428823734363 364.5,267.735 351.27483182341933,277.3428823734363 356.32566924244315,261.79600106665265 343.10122838335906,252.18711762656366 359.4479857565462,252.1864989333473"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="402,274.14 407.0520142434538,289.6864989333473 423.39877161664094,289.6871176265637 410.17433075755685,299.29600106665265 415.22516817658067,314.8428823734363 402,305.235 388.77483182341933,314.8428823734363 393.82566924244315,299.29600106665265 380.60122838335906,289.6871176265637 396.9479857565462,289.6864989333473"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="300"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Botswana correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#69B3E7"
            height="150"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="16.666666666666668"
            width="600"
            x="0"
            y="150"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#000000"
            height="66.66666666666667"
            width="600"
            x="0"
            y="166.66666666666666"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="16.666666666666668"
            width="600"
            x="0"
            y="233.33333333333331"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#69B3E7"
            height="150"
            width="600"
            x="0"
            y="249.99999999999997"
          />
        </g>
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Brazil correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 420"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="420"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#007A3D"
            height="420"
            width="600"
            x="0"
            y="0"
          />
        </g>
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          fill="#FFD700"
          points="51,210 300,51 549,210 300,369"
          stroke="none"
          stroke-linejoin="round"
          stroke-width="0"
        />
        <image
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#E2E8F0"
          height="391.85999999999996"
          href="Flag-of-Brazil-06.svg"
          width="391.85999999999996"
          x="104.07000000000002"
          y="14.070000000000022"
        />
        <circle
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          cx="300"
          cy="210"
          display="block"
          fill="#0055A4"
          r="105"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="420"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Bulgaria correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 360"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="360"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="120"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#007A3D"
            height="120"
            width="600"
            x="0"
            y="120"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="120"
            width="600"
            x="0"
            y="240"
          />
        </g>
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="360"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Burkina Faso correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="200"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#007A3D"
            height="200"
            width="600"
            x="0"
            y="200"
          />
        </g>
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFD700"
          points="300,140 313.4720379825435,181.4573304889262 357.0633909777092,181.45898033750316 321.7982153534849,207.0826695110738 335.2671151375484,248.54101966249686 300,222.92000000000002 264.7328848624516,248.54101966249686 278.2017846465151,207.0826695110738 242.93660902229078,181.45898033750316 286.5279620174565,181.4573304889262"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Burundi correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 360"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="360"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <polygon
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            points="0,0 600,0 300,180"
          />
          <polygon
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#007A3D"
            points="600,0 600,360 300,180"
          />
          <polygon
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            points="600,360 0,360 300,180"
          />
          <polygon
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#007A3D"
            points="0,360 0,0 300,180"
          />
        </g>
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          fill="#FFFFFF"
          points="0,27.988569095257446 0,0 46.647615158762406,0 300,152.01143090474255 553.3523848412376,0 600,0 600,27.988569095257446 346.6476151587624,180 600,332.01143090474255 600,360 553.3523848412376,360 300,207.98856909525745 46.647615158762406,360 0,360 0,332.01143090474255 253.3523848412376,180"
          stroke="none"
          stroke-linejoin="miter"
          stroke-width="0"
        />
        <circle
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          cx="300"
          cy="180"
          display="block"
          fill="#FFFFFF"
          r="107.73000000000002"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#EF3340"
          points="300,100.44 307.7895,113.94819023444222 323.38268590217984,113.94 315.579,127.44 323.38268590217984,140.94 307.7895,140.93180976555777 300,154.44 292.2105,140.93180976555777 276.61731409782016,140.94 284.421,127.44 276.61731409782016,113.94 292.21049999999997,113.94819023444224"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#EF3340"
          points="254.28,179.388 262.0695,192.89619023444223 277.6626859021798,192.888 269.859,206.388 277.6626859021799,219.888 262.0695,219.87980976555778 254.28,233.388 246.4905,219.87980976555778 230.89731409782016,219.888 238.701,206.388 230.89731409782016,192.888 246.4905,192.89619023444223"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#EF3340"
          points="345.72,179.388 353.5095,192.89619023444223 369.10268590217987,192.888 361.29900000000004,206.388 369.10268590217987,219.888 353.5095,219.87980976555778 345.72,233.388 337.93050000000005,219.87980976555778 322.3373140978202,219.888 330.141,206.388 322.3373140978202,192.888 337.9305,192.89619023444223"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="360"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Chile correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="200"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="200"
            width="600"
            x="0"
            y="200"
          />
        </g>
        <rect
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          fill="#0055A4"
          height="200"
          stroke="none"
          stroke-width="0"
          width="200"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="100,46 112.12483418428914,83.31159744003358 151.3570518799383,83.31308230375284 119.61839381813643,106.37440255996641 131.74040362379355,143.68691769624718 100,120.628 68.25959637620646,143.68691769624718 80.38160618186357,106.37440255996641 48.6429481200617,83.31308230375285 87.87516581571086,83.31159744003358"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Cuba correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 300"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="300"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#002A8F"
            height="60"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="60"
            width="600"
            x="0"
            y="60"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#002A8F"
            height="60"
            width="600"
            x="0"
            y="120"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="60"
            width="600"
            x="0"
            y="180"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#002A8F"
            height="60"
            width="600"
            x="0"
            y="240"
          />
        </g>
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          fill="#EF3340"
          points="0,0 260,150 0,300"
          stroke="none"
          stroke-linejoin="round"
          stroke-width="0"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
          points="91,100 102.22669831878623,134.5477754074385 138.55282581475768,134.54915028125262 109.16517946123743,155.90222459256148 120.38926261462366,190.45084971874738 91,169.1 61.61073738537635,190.45084971874738 72.83482053876257,155.9022245925615 43.44717418524232,134.54915028125265 79.77330168121377,134.5477754074385"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="300"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Czech Republic correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="200"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="200"
            width="600"
            x="0"
            y="200"
          />
        </g>
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          fill="#0055A4"
          points="0,0 300,200 0,400"
          stroke="none"
          stroke-linejoin="round"
          stroke-width="0"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders France correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#0055A4"
            height="400"
            width="200"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="400"
            width="200"
            x="200"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="400"
            width="200"
            x="400"
            y="0"
          />
        </g>
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Italy correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#007A3D"
            height="400"
            width="200"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="400"
            width="200"
            x="200"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="400"
            width="200"
            x="400"
            y="0"
          />
        </g>
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders Japan correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="400"
            width="600"
            x="0"
            y="0"
          />
        </g>
        <circle
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          cx="300"
          cy="200"
          display="block"
          fill="#EF3340"
          r="162"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders South Africa correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 400"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="400"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="200"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#001489"
            height="200"
            width="600"
            x="0"
            y="200"
          />
        </g>
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          fill="#FFFFFF"
          points="600,133.33333333333334 320.1850425154663,133.33333333333334 0,-80.12336167697752 0,80.12336167697752 179.81495748453372,200 0,319.87663832302246 0,480.12336167697754 320.1850425154663,266.66666666666663 600,266.66666666666663"
          stroke="#FFFFFF"
          stroke-linejoin="round"
          stroke-width="16"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          fill="#007A3D"
          points="600,160 312.1110255092798,160 0,-48.07401700618652 0,48.07401700618652 227.88897449072022,200 0,351.9259829938135 0,448.0740170061865 312.1110255092798,240 600,240"
          stroke="#FFFFFF"
          stroke-linejoin="round"
          stroke-width="16"
        />
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          fill="#000000"
          points="0,80 180,200 0,320"
          stroke="#FFB612"
          stroke-linejoin="round"
          stroke-width="16"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="400"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders The Bahamas correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 300"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="300"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#00778B"
            height="100"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFD700"
            height="100"
            width="600"
            x="0"
            y="100"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#00778B"
            height="100"
            width="600"
            x="0"
            y="200"
          />
        </g>
        <polygon
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          fill="#000000"
          points="0,0 260,150 0,300"
          stroke="none"
          stroke-linejoin="round"
          stroke-width="0"
        />
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="300"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;

exports[`Flag Snapshots renders United States correctly 1`] = `
<div>
  <div
    class="w-full flex justify-center bg-gray-100 rounded-lg p-4 shadow-inner"
  >
    <svg
      class="shadow-xl select-none"
      style="width: 100%; height: auto; max-width: 600px; background-color: rgb(255, 255, 255);"
      viewBox="0 0 600 315.7894736842105"
    >
      <mask
        id="flag-mask"
      >
        <rect
          fill="white"
          height="315.7894736842105"
          width="600"
        />
      </mask>
      <g
        mask="url(#flag-mask)"
      >
        <g>
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="24.291497975708502"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="24.291497975708502"
            width="600"
            x="0"
            y="24.291497975708502"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="24.291497975708502"
            width="600"
            x="0"
            y="48.582995951417004"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="24.291497975708502"
            width="600"
            x="0"
            y="72.87449392712551"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="24.291497975708502"
            width="600"
            x="0"
            y="97.16599190283401"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="24.291497975708502"
            width="600"
            x="0"
            y="121.4574898785425"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="24.291497975708502"
            width="600"
            x="0"
            y="145.74898785425103"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="24.291497975708502"
            width="600"
            x="0"
            y="170.04048582995952"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="24.291497975708502"
            width="600"
            x="0"
            y="194.33198380566802"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="24.291497975708502"
            width="600"
            x="0"
            y="218.6234817813765"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="24.291497975708502"
            width="600"
            x="0"
            y="242.914979757085"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#FFFFFF"
            height="24.291497975708502"
            width="600"
            x="0"
            y="267.20647773279353"
          />
          <rect
            class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
            fill="#EF3340"
            height="24.291497975708502"
            width="600"
            x="0"
            y="291.49797570850205"
          />
        </g>
        <rect
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          fill="#3C3B6E"
          height="170.5263157894737"
          stroke="none"
          stroke-width="0"
          width="240"
        />
        <g
          class="cursor-pointer transition-opacity hover:opacity-90 outline-none"
          display="block"
          fill="#FFFFFF"
        >
          <circle
            cx="34.285714285714285"
            cy="28.42105263157895"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="68.57142857142857"
            cy="28.42105263157895"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="102.85714285714286"
            cy="28.42105263157895"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="137.14285714285714"
            cy="28.42105263157895"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="171.42857142857142"
            cy="28.42105263157895"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="205.71428571428572"
            cy="28.42105263157895"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="34.285714285714285"
            cy="56.8421052631579"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="68.57142857142857"
            cy="56.8421052631579"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="102.85714285714286"
            cy="56.8421052631579"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="137.14285714285714"
            cy="56.8421052631579"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="171.42857142857142"
            cy="56.8421052631579"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="205.71428571428572"
            cy="56.8421052631579"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="34.285714285714285"
            cy="85.26315789473685"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="68.57142857142857"
            cy="85.26315789473685"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="102.85714285714286"
            cy="85.26315789473685"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="137.14285714285714"
            cy="85.26315789473685"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="171.42857142857142"
            cy="85.26315789473685"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="205.71428571428572"
            cy="85.26315789473685"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="34.285714285714285"
            cy="113.6842105263158"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="68.57142857142857"
            cy="113.6842105263158"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="102.85714285714286"
            cy="113.6842105263158"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="137.14285714285714"
            cy="113.6842105263158"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="171.42857142857142"
            cy="113.6842105263158"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="205.71428571428572"
            cy="113.6842105263158"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="34.285714285714285"
            cy="142.10526315789474"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="68.57142857142857"
            cy="142.10526315789474"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="102.85714285714286"
            cy="142.10526315789474"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="137.14285714285714"
            cy="142.10526315789474"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="171.42857142857142"
            cy="142.10526315789474"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <circle
            cx="205.71428571428572"
            cy="142.10526315789474"
            fill="#FFFFFF"
            r="3.789473684210526"
          />
          <rect
            fill="transparent"
            height="170.5263157894737"
            width="240"
          />
        </g>
      </g>
      <rect
        class="pointer-events-none"
        fill="none"
        height="315.7894736842105"
        stroke="#ddd"
        stroke-width="1"
        width="600"
      />
    </svg>
  </div>
</div>
`;
